# rp2040_advanced

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md  TFT_eSPI_Setup.h  hello.pio  lv_conf.h  main.cpp  platformio.ini
lib/: lvgl.h
lib/PROTOCOL/: protocol.cpp  protocol.h
lib/TASK/: task.cpp  task.h
pico-blink-noboot2/: blink.c
pico-py-serial-flash/: pyvenv.cfg
src/: main.cpp
